--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  geolocator: ^10.0.1
-  google_api_headers: ^2.0.0
+  geolocator: ^12.0.0
+  google_api_headers: ^4.0.3
   google_maps_flutter: ^2.5.0
-  flutter_google_maps_webservices: ^1.1.1
-  http: ^1.1.0
+  # flutter_google_maps_webservices: ^1.1.1
+  flutter_google_maps_webservices:
+   git:
+    url: https://github.com/cartrustsa/flutter_google_maps_webservices
+  http: ^0.13.6
   provider: ^6.0.5
   tuple: ^2.0.2
   uuid: ^4.0.0
-  package_info_plus: ^4.1.0
+  package_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
